--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 asgiref==3.7.1
 cloudinary==1.33.0
+crispy-bootstrap5==0.7
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==3.2.19
+django-ckeditor==6.5.1
+django-countries==7.5.1
+django-crispy-forms==2.0
+django-js-asset==2.0.0
 gunicorn==20.1.0
 psycopg2==2.9.6
 pytz==2023.3
